<resources>
    <string name="app_name">GDRitzy\'sFinal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Main Screen</string>
    <string name="menu_gallery">Combos</string>
    <string name="menu_slideshow">Sandwiches</string>
    <string name="menu_hotdogs">Hot Dogs</string>
    <string name="menu_chili">Chili</string>
    <string name="menu_specialties">Specialties</string>
    <string name="menu_salads">Salads</string>
    <string name="menu_icecream">Ice Cream</string>
    <string name="menu_checkout">Checkout</string>
</resources>