<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.gdritzysfinal.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.gdritzysfinal.ui.combos.ComboFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_combos" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.gdritzysfinal.ui.sandwiches.SandwichFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_sandwiches" />

    <fragment
        android:id="@+id/nav_hotdogs"
        android:name="com.example.gdritzysfinal.ui.hotdogs.HotdogsFragment"
        android:label="@string/menu_hotdogs"
        tools:layout="@layout/fragment_hotdogs" />

    <fragment
        android:id="@+id/nav_chili"
        android:name="com.example.gdritzysfinal.ui.chili.ChiliFragment"
        android:label="@string/menu_chili"
        tools:layout="@layout/fragment_chili" />

    <fragment
        android:id="@+id/nav_specialties"
        android:name="com.example.gdritzysfinal.ui.specialties.SpecialtiesFragment"
        android:label="@string/menu_specialties"
        tools:layout="@layout/fragment_specialties" />

    <fragment
        android:id="@+id/nav_salads"
        android:name="com.example.gdritzysfinal.ui.salads.SaladsFragment"
        android:label="@string/menu_salads"
        tools:layout="@layout/fragment_salads" />

    <fragment
        android:id="@+id/nav_icecream"
        android:name="com.example.gdritzysfinal.ui.icecream.IcecreamFragment"
        android:label="@string/menu_icecream"
        tools:layout="@layout/fragment_icecream" />

    <fragment
        android:id="@+id/nav_checkout"
        android:name="com.example.gdritzysfinal.ui.checkout.CheckoutFragment"
        android:label="@string/menu_icecream"
        tools:layout="@layout/fragment_icecream" />




</navigation>